--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,1 +1,56 @@
-.env
+# # Python-related
+# *.pyc
+# *.pyo
+# *.pyd
+# __pycache__/
+# *.db
+# *.sqlite3
+# *.pyenv
+# *.venv
+# .env
+# venv/
+# env/
+# .venv/
+
+# # IDEs and editors
+# .vscode/
+# .idea/
+# *.swp
+# *.swo
+# *.sublime-workspace
+# *.sublime-project
+
+# # OS-specific
+# .DS_Store
+# Thumbs.db
+
+# # FastAPI
+# # Ignore static files and media files
+# static/
+# media/
+
+# # Logs
+# *.log
+
+# # Build
+# build/
+# dist/
+# *.egg-info
+
+# # Coverage
+# .coverage
+# coverage.xml
+# *.cover
+# *.py,cover
+
+# # Deployment
+# *.pem
+# *.key
+# *.crt
+
+# # Pytest
+# .cache/
+# nosetests.xml
+# coverage.xml
+# *.cover
+# *.py,cover
