--- a/.github/workflows/backend-build-and-push.yaml
+++ b/.github/workflows/backend-build-and-push.yaml
@@ -20,7 +20,7 @@ jobs:
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
       - name: Build Backend Docker image
-        run: docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/backend:latest ./backend
+        run: docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/rental_fastapi:latest ./backend
 
       - name: Push Backend Docker image
-        run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/backend:latest
+        run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/rental_fastapi:latest
