--- a/.github/workflows/frontend-build-and-push.yml
+++ b/.github/workflows/frontend-build-and-push.yml
@@ -20,7 +20,7 @@ jobs:
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
       - name: Build Frontend Docker image
-        run: docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/frontend:latest ./frontend
+        run: docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/rental_nextjs:latest ./frontend
 
       - name: Push Frontend Docker image
-        run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/frontend:latest
+        run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/rental_nextjs:latest
