--- a/.github/workflows/backend-build-and-push.yaml
+++ b/.github/workflows/backend-build-and-push.yaml
@@ -1,26 +1,68 @@
-name: Build and Push Backend Docker Image
+name: Build and Deploy to AWS
 
 on:
   push:
     branches:
-      - backend
+      - main
+    paths-ignore:
+      - "**/*.md"
 
 jobs:
-  build-and-push-backend:
-    name: Build and Push Backend Docker Image
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      # Step 1: Checkout the code from the repository
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+      # Step 2: Log in to Docker Hub
+      - name: Docker Hub Login
+        run: echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
 
-      - name: Build Backend Docker image
-        run: docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/rental_fastapi:latest ./backend
+      # Step 3: Build the Docker image with caching
+      - name: Build Docker Image
+        run: |
+          docker build \
+            --cache-from ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.BACKEND_IMAGE_NAME }}:latest \
+            --tag ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.BACKEND_IMAGE_NAME }}:latest .
 
-      - name: Push Backend Docker image
-        run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/rental_fastapi:latest
+      # Step 4: Push the Docker image to Docker Hub
+      - name: Push Docker Image
+        run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.BACKEND_IMAGE_NAME }}:latest
+
+      # Step 5: Verify the Docker image
+      - name: Verify Docker Image
+        run: docker inspect ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.BACKEND_IMAGE_NAME }}:latest --format '{{.Id}}'
+
+      # # Step 6: Deploy to AWS
+      # - name: Deploy to AWS
+      #   run: |
+      #     # Create and set permissions for SSH key
+      #     echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/ssh_key
+      #     chmod 600 ~/ssh_key
+
+      #     # SSH into the EC2 instance and execute deployment commands
+      #     ssh -o StrictHostKeyChecking=no -i "~/ssh_key" ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+      #       # Change directory to project folder
+      #       cd ~/fastapi-docker
+
+      #       # Update environment file
+      #       echo "${{ secrets.ENV_FILE }}" | tr ' ' '\n' > .env
+
+      #       # Pull the latest code
+      #       git pull origin main
+
+      #       # Pull the latest Docker image
+      #       sudo docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.BACKEND_IMAGE_NAME }}:latest
+
+      #       # Restart the FastAPI service
+      #       sudo docker compose restart backend
+
+      #       # Clean up unused images and containers
+      #       sudo docker image prune -f
+      #       sudo docker container prune -f
+
+      #       # List running containers
+      #       sudo docker ps
+      #     EOF
