--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,23 +18,17 @@ services:
       - app-network
 
   backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
+    image: hojiakbar2806/rental_fastapi
     container_name: backend
-    ports:
-      - "8000:8000"
     networks:
       - app-network
+    expose:
+      - "8000" 
 
   frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
+    image: hojiakbar2806/rental_nextjs
     container_name: frontend
-    ports:
-      - "3000:3000"
     networks:
       - app-network
-
-
+    expose:
+      - "3000"
