--- a/.github/workflows/frontend-build-and-push.yml
+++ b/.github/workflows/frontend-build-and-push.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy to AWS
+name: Rental frontend deploy
 
 on:
   push:
@@ -12,30 +12,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the code from the repository
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      # Step 2: Log in to Docker Hub
       - name: Docker Hub Login
         run: echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
 
-      # Step 3: Build the Docker image with caching
       - name: Build Docker Image
         run: |
           docker build \
             --cache-from ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.FRONTEND_IMAGE_NAME }}:latest \
             --tag ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.FRONTEND_IMAGE_NAME }}:latest ./frontend
 
-      # Step 4: Push the Docker image to Docker Hub
       - name: Push Docker Image
         run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.FRONTEND_IMAGE_NAME }}:latest
 
-      # Step 5: Verify the Docker image
       - name: Verify Docker Image
         run: docker inspect ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.FRONTEND_IMAGE_NAME }}:latest --format '{{.Id}}'
 
-      # Step 6: Deploy to AWS
       - name: Deploy to AWS
         run: |
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/ssh_key
@@ -43,7 +37,6 @@ jobs:
 
           ssh -o StrictHostKeyChecking=no -i "~/ssh_key" ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
             cd ~/rental_yards
-            echo "success"
 
             echo "${{ secrets.ENV_FILE }}" | tr ' ' '\n' > .env
 
