--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,7 +2,9 @@ FROM python:3.12-slim
 
 WORKDIR /app
 
-RUN pip install poetry
+RUN pip install --upgrade pip setuptools
+
+RUN pip install poetry && poetry config virtualenvs.create false
 
 COPY pyproject.toml poetry.lock* /app/
 
@@ -12,4 +14,4 @@ COPY . /app/
 
 EXPOSE 8000
 
-CMD poetry run gunicorn main:app --workers=4 --worker-class=uvicorn.workers.UvicornWorker --bind 0.0.0.0:8000
+CMD ["poetry", "run", "gunicorn", "main:app", "--workers=4", "--worker-class=uvicorn.workers.UvicornWorker", "--bind", "0.0.0.0:8000"]
