--- a/.github/workflows/frontend-build-and-push.yml
+++ b/.github/workflows/frontend-build-and-push.yml
@@ -40,13 +40,13 @@ jobs:
 
             echo "${{ secrets.ENV_FILE }}" | tr ' ' '\n' > .env
 
-          #   git pull origin main
+            git pull origin frontend
 
-          #   sudo docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.BACKEND_IMAGE_NAME }}:latest
+            sudo docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.BACKEND_IMAGE_NAME }}:latest
 
-          #   sudo docker-compose up -d --no-deps --build backend
+            sudo docker-compose up -d 
 
-          #   sudo docker image prune -f
-          #   sudo docker container prune -f
-          #   sudo docker ps
-          # EOF
+            sudo docker image prune -f
+            sudo docker container prune -f
+            sudo docker ps
+          EOF
