--- a/.github/workflows/backend-build-and-push.yaml
+++ b/.github/workflows/backend-build-and-push.yaml
@@ -41,7 +41,7 @@ jobs:
 
             echo "${{ secrets.ENV_FILE }}" | tr ' ' '\n' > .env
 
-            git pull origin backend
+            git pull origin main
 
             sudo docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.BACKEND_IMAGE_NAME }}:latest
 
