--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,9 +2,7 @@ FROM python:3.12-slim
 
 WORKDIR /app
 
-RUN pip install --upgrade pip setuptools
-
-RUN pip install poetry && poetry config virtualenvs.create false
+RUN pip install poetry
 
 COPY pyproject.toml poetry.lock* /app/
 
@@ -14,4 +12,4 @@ COPY . /app/
 
 EXPOSE 8000
 
-CMD ["poetry", "run", "gunicorn", "main:app", "--workers=4", "--worker-class=uvicorn.workers.UvicornWorker", "--bind", "0.0.0.0:8000"]
+CMD poetry run gunicorn main:app --workers=4 --worker-class=uvicorn.workers.UvicornWorker --bind 0.0.0.0:8000
