--- a/.github/workflows/backend-build-and-push.yaml
+++ b/.github/workflows/backend-build-and-push.yaml
@@ -36,7 +36,7 @@ jobs:
           chmod 600 ~/ssh_key
 
           ssh -o StrictHostKeyChecking=no -i "~/ssh_key" ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
-            cd ~/rental_yards
+            cd ~/rental-yards
             echo "success"
 
             echo "${{ secrets.ENV_FILE }}" | tr ' ' '\n' > .env
