--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,32 +3,61 @@ networks:
     driver: bridge
 
 services:
+  backend:
+    image: hojiakbar2806/rental_fastapi:latest
+    container_name: backend
+    command: /bin/sh -c "alembic upgrade head && gunicorn -w 4 -k uvicorn.workers.UvicornWorker -b 0.0.0.0:8000 main:app"
+    expose:
+      - "8000"
+    env_file:
+      - .env  
+    networks:
+      - app-network
+
+  frontend:
+    image: hojiakbar2806/rental_nextjs:latest
+    container_name: frontend
+    env_file:
+      - .env  
+    expose:
+      - "3000"
+    networks:
+      - app-network
+
+  postgres:
+    image: postgres:latest
+    container_name: postgres
+    env_file:
+      - .env  
+    ports:
+      - "5432:5432"
+    volumes:
+      - ./postgres:/var/lib/postgresql/data
+    networks:
+      - app-network
+
+  redis:
+    image: redis:latest
+    container_name: redis
+    env_file:
+      - .env  
+    ports:
+      - "6379:6379"
+    networks:
+      - app-network
+
   nginx:
     image: nginx:latest
     container_name: nginx
+    depends_on:
+      - frontend
+      - backend
     ports:
       - "80:80"
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./nginx/error-pages:/usr/share/nginx/html
-    depends_on:
-      - frontend
-      - backend
+
     networks:
       - app-network
 
-  backend:
-    image: hojiakbar2806/rental_fastapi
-    container_name: backend
-    networks:
-      - app-network
-    expose:
-      - "8000" 
-
-  frontend:
-    image: hojiakbar2806/rental_nextjs
-    container_name: frontend
-    networks:
-      - app-network
-    expose:
-      - "3000"
