--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,19 +1,23 @@
-# Build Stage
-FROM node:18 AS builder
+FROM node:18-alpine AS builder
 
 WORKDIR /app
 
-COPY package.json package-lock.json ./
-
-RUN npm install
+COPY package*.json ./
+RUN npm ci
 
 COPY . .
-
 RUN npm run build
 
+RUN npm prune --production && npm cache clean --force
 
-RUN npm install --only=production
+FROM node:18-alpine AS production
+WORKDIR /app
+
+COPY --from=builder /app/package*.json ./
+RUN npm ci --only=production
+
+COPY --from=builder /app/.next ./.next
+COPY --from=builder /app/public ./public
 
 EXPOSE 3000
-
 CMD ["npm", "start"]
