--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     container_name: backend
     command: /bin/sh -c "alembic upgrade head && gunicorn -w 4 -k uvicorn.workers.UvicornWorker -b 0.0.0.0:8000 main:app"
     environment:
-      - ENV=production
+      - APP_ENV=production
       - DEBUG=False
     env_file:
       - .env  
