--- a/.github/workflows/backend-build-and-push.yaml
+++ b/.github/workflows/backend-build-and-push.yaml
@@ -37,19 +37,20 @@ jobs:
 
           ssh -o StrictHostKeyChecking=no -i "~/ssh_key" ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
             cd ~/rental-yards
-            echo "success"
+
+            rm -rf frontend backend .github
+
+            git fetch origin main
+            git checkout origin/main -- docker-compose.yml nginx/
 
             echo "${{ secrets.ENV_FILE }}" | tr ' ' '\n' > .env
-            git pull origin main
 
             sudo docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.BACKEND_IMAGE_NAME }}:latest
 
             sudo docker compose stop backend
             sudo docker compose rm -f backend
-
             sudo docker compose up -d backend
 
             sudo docker image prune -f
             sudo docker container prune -f
-
           EOF
