--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,8 @@ services:
       - .env  
     expose:
       - "8000"
+    volumes:
+      - ./backend_docker:/app 
     networks:
       - app-network
 
@@ -24,6 +26,8 @@ services:
       - .env  
     expose:
       - "3000"
+    volumes:
+      - ./frontend_docker:/app 
     networks:
       - app-network
 
@@ -35,7 +39,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - ./postgres:/var/lib/postgresql/data
+      - ./postgres_docker:/var/lib/postgresql/data
     networks:
       - app-network
 
