--- a/.github/workflows/backend-build-and-push.yaml
+++ b/.github/workflows/backend-build-and-push.yaml
@@ -4,8 +4,6 @@ on:
   push:
     branches:
       - backend
-    paths-ignore:
-      - "**/*.md"
 
 jobs:
   build:
@@ -38,10 +36,9 @@ jobs:
           ssh -o StrictHostKeyChecking=no -i "~/ssh_key" ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
             cd ~/rental-yards
 
-            rm -rf frontend backend .github
+            git pull origin backend
 
-            git fetch origin main
-            git checkout origin/main -- docker-compose.yml nginx/
+            rm -rf frontend backend .github
 
             echo "${{ secrets.ENV_FILE }}" | tr ' ' '\n' > .env
 
