--- a/.github/workflows/frontend-build-and-push.yml
+++ b/.github/workflows/frontend-build-and-push.yml
@@ -4,8 +4,6 @@ on:
   push:
     branches:
       - frontend
-    paths-ignore:
-      - "**/*.md"
 
 jobs:
   build:
@@ -40,10 +38,9 @@ jobs:
 
             echo "${{ secrets.ENV_FILE }}" | tr ' ' '\n' > .env
 
-            rm -rf frontend backend .github
+            git pull origin frontend
 
-            git fetch origin main
-            git checkout origin/main -- docker-compose.yml nginx/
+            rm -rf frontend backend .github
 
             sudo docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.FRONTEND_IMAGE_NAME }}:latest
 
