--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,18 +1,18 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name localhost; # Yoki tashqi domen nomi
 
     location / {
-        proxy_pass http://frontend:3000;
+        proxy_pass http://frontend:3000; # Frontend xizmatiga ulanish
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        error_page 500 502 503 504 /500.html;
+        error_page 500 502 503 504 /500.html; # Xato sahifalari
     }
 
     location /api/ {
-        proxy_pass http://backend:8000;
+        proxy_pass http://backend:8000; # Backend xizmatiga ulanish
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -22,7 +22,7 @@ server {
     }
 
     location = /404.html {
-        root /usr/share/nginx/html;
+        root /usr/share/nginx/html; # Xato sahifalari katalogi
         internal;
     }
 
