--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,9 @@ networks:
 services:
   backend:
     image: hojiakbar2806/rental_fastapi:latest
+    # build: 
+    #   context: ./backend
+    #   dockerfile: Dockerfile
     container_name: backend
     command: /bin/sh -c "alembic upgrade head && gunicorn -w 4 -k uvicorn.workers.UvicornWorker -b 0.0.0.0:8000 main:app"
     environment:
@@ -19,6 +22,9 @@ services:
 
   frontend:
     image: hojiakbar2806/rental_nextjs:latest
+    # build:
+    #   context: ./frontend
+    #   dockerfile: Dockerfile
     container_name: frontend
     env_file:
       - .env  
@@ -33,7 +39,7 @@ services:
     env_file:
       - .env  
     ports:
-      - "5432:5432"
+      - "5432:5432"  
     volumes:
       - ./postgres_container:/var/lib/postgresql/data
     networks:
@@ -45,7 +51,7 @@ services:
     env_file:
       - .env  
     ports:
-      - "6379:6379"
+      - "6379:6379"  
     networks:
       - app-network
 
@@ -56,11 +62,9 @@ services:
       - frontend
       - backend
     ports:
-      - "80:80"
+      - "80:80" 
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ./nginx/error-pages:/usr/share/nginx/html
-
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf  
+      - ./nginx/error-pages:/usr/share/nginx/html  
     networks:
       - app-network
-
