--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,23 +1,30 @@
-FROM node:18-alpine AS builder
+FROM node:20-alpine AS dependencies
 
 WORKDIR /app
 
 COPY package*.json ./
 RUN npm ci
 
+FROM node:20-alpine AS build
+
+WORKDIR /app
+
 COPY . .
+
 RUN npm run build
 
 RUN npm prune --production && npm cache clean --force
 
-FROM node:18-alpine AS production
+FROM node:20-alpine AS production
+
 WORKDIR /app
 
-COPY --from=builder /app/package*.json ./
+COPY --from=build /app/package*.json ./
 RUN npm ci --only=production
 
-COPY --from=builder /app/.next ./.next
-COPY --from=builder /app/public ./public
+COPY --from=build /app/.next ./.next
+COPY --from=build /app/public ./public
 
 EXPOSE 3000
+
 CMD ["npm", "start"]
