--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -12,6 +12,7 @@ server {
     }
 
     location /api/ {
+        rewrite ^/api/(.*)$ /$1 break; # /api/ dan qochish
         proxy_pass http://backend:8000; # Backend xizmatiga ulanish
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
